PP-6 Residual changes in story 3

--- a/incedo_questions/practice_days/12-dec/dec03.ipynb
+++ b/incedo_questions/practice_days/12-dec/dec03.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Racecaar is a Palindrome: False\n"
+      "Racecar is a Palindrome: False\n"
      ]
     }
    ],
@@ -76,17 +76,28 @@
     "input_str7 = \"Racecar\"\n",
     "\n",
     "def is_palindrome(input_str: str)-> bool:\n",
-    "    i=0\n",
-    "    for char in input_str:\n",
-    "        if input_str[i] != input_str[-i]:\n",
-    "            palindrome_status = False\n",
-    "            break\n",
-    "        else:\n",
-    "            palindrome_status = True\n",
-    "            i+=1\n",
-    "    return palindrome_status\n",
+    "    if len()\n",
     "\n",
     "print(f\"{input_str7} is a Palindrome: {is_palindrome(input_str7)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2bf04ba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input String: Racecar and reverse is racecaR\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_str = \"Racecar\"\n",
+    "print(f\"Input String: {input_str} and reverse is {input_str[::-1]}\")"
    ]
   }
  ],
