--- a/incedo_questions/practice_days/12-dec/dec03.ipynb
+++ b/incedo_questions/practice_days/12-dec/dec03.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a5e14415",
    "metadata": {},
    "outputs": [
@@ -68,36 +68,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Racecar is a Palindrome: False\n"
+      "racecar is a Palindrome: True\n"
      ]
     }
    ],
    "source": [
-    "input_str7 = \"Racecar\"\n",
+    "input_str7 = \"racecar\"\n",
     "\n",
     "def is_palindrome(input_str: str)-> bool:\n",
-    "    if len()\n",
+    "    if input_str == input_str[::-1]:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "print(f\"{input_str7} is a Palindrome: {is_palindrome(input_str7)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "2bf04ba6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input String: Racecar and reverse is racecaR\n"
-     ]
-    }
-   ],
-   "source": [
-    "input_str = \"Racecar\"\n",
-    "print(f\"Input String: {input_str} and reverse is {input_str[::-1]}\")"
    ]
   }
  ],
