--- a/incedo_questions/practice_days/12-dec/dec04.ipynb
+++ b/incedo_questions/practice_days/12-dec/dec04.ipynb
@@ -61,6 +61,42 @@
     "print(input_list)\n",
     "print(input_list[-1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a35a1884",
+   "metadata": {},
+   "source": [
+    "Q5. Write a function that counts the number of vowels (a, e, i, o, u) in a string. <br>\n",
+    "Example - count_vowels(\"hello\") -> 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e4feb4ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The vowel count of helloooo is 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "vowel_list = ['a', 'e', 'i', 'o', 'u']\n",
+    "\n",
+    "def count_vowels(input_word: str) -> int:\n",
+    "    vowel_count = 0\n",
+    "    for char in input_word:\n",
+    "        if char in vowel_list:\n",
+    "            vowel_count += 1\n",
+    "    return vowel_count\n",
+    "input_str = \"helloooo\"\n",
+    "print(f\"The vowel count of {input_str} is {count_vowels(input_str)}\")"
+   ]
   }
  ],
  "metadata": {
