PP-7 Updating dec-04.ipynb

--- a/incedo_questions/practice_days/12-dec/dec04.ipynb
+++ b/incedo_questions/practice_days/12-dec/dec04.ipynb
@@ -5,7 +5,7 @@
    "id": "ab615e71",
    "metadata": {},
    "source": [
-    "## Practice Date - 03rd December 2025\n",
+    "## Practice Date - 04th December 2025\n",
     "\n",
     "#### Repeating Question 6 and 5\n",
     "---\n",
@@ -67,6 +67,8 @@
    "id": "a35a1884",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "Q5. Write a function that counts the number of vowels (a, e, i, o, u) in a string. <br>\n",
     "Example - count_vowels(\"hello\") -> 2"
    ]
