--- a/incedo_questions/practice_days/2026/02-feb/feb04.ipynb
+++ b/incedo_questions/practice_days/2026/02-feb/feb04.ipynb
@@ -7,10 +7,10 @@
       "source": [
         "## Practice Date - 04th February 2026\n",
         "\n",
-        "#### Repeating Question 2 to 15\n",
+        "#### Repeating Question 2 to 7\n",
         "---\n",
         "\n",
-        "Question 2 - Write a function that takes a list of numbers and returns their sum.\n",
+        "Question 2 - Write a function that takes a list of numbers and returns their sum.<br>\n",
         "Example: sum_list([1, 2, 3, 4]) -> 10"
       ]
     },
@@ -114,6 +114,118 @@
         "    return fact\n",
         "\n",
         "print(factorial(input_num04))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "fcd26fb8",
+      "metadata": {},
+      "source": [
+        "Question 5: Write a function that counts the number of vowels (a, e, i, o, u) in a string.<br>\n",
+        "Example: count_vowels(\"hello\") -> 2\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fa870d25",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ]
+        }
+      ],
+      "source": [
+        "input_str05 = \"hello\"\n",
+        "\n",
+        "def count_vowels(input_str: str):\n",
+        "    vowel_count = 0\n",
+        "    vowel_list = ['a', 'e', 'i', 'o', 'u']\n",
+        "    for char in input_str:\n",
+        "        if char in vowel_list:\n",
+        "            vowel_count += 1\n",
+        "    return vowel_count\n",
+        "\n",
+        "print(count_vowels(input_str05))\n",
+        "        \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "049145a3",
+      "metadata": {},
+      "source": [
+        "Question 6: Write a function that takes a list of numbers and returns the maximum value. <br>\n",
+        "Example: find_max([3, 1, 4, 1, 5]) -> 5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "43228bee",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ]
+        }
+      ],
+      "source": [
+        "input_num06 = [3, 1, 4, 1, 10]\n",
+        "\n",
+        "def find_max(input_num):\n",
+        "    # max = max(input_num)\n",
+        "    max = input_num[0]\n",
+        "    for num in input_num:\n",
+        "        if max < num:\n",
+        "            max = num\n",
+        "    return max\n",
+        "\n",
+        "print(find_max(input_num06))\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "28a52970",
+      "metadata": {},
+      "source": [
+        "Question 7 - Write a functio nthat checks if a string is a palindrome (case-insenstive)<br>\n",
+        "Example - is_palindrome(\"Racecar\") -> True"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "id": "12174f34",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
+      "source": [
+        "input_str07 = \"RacEcar\"\n",
+        "def is_palindrome(input_str):\n",
+        "    input_str = input_str.lower()\n",
+        "    while(input_str):\n",
+        "        if input_str[::] != input_str[::-1]:\n",
+        "            return False\n",
+        "        else:\n",
+        "            return True\n",
+        "\n",
+        "print(is_palindrome(input_str07))\n"
       ]
     }
   ],
