--- a/incedo_questions/practice_days/2026/02-feb/feb08.ipynb
+++ b/incedo_questions/practice_days/2026/02-feb/feb08.ipynb
@@ -40,6 +40,53 @@
         "\n",
         "print(remove_duplicates(input_list08))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a15caf5f",
+      "metadata": {},
+      "source": [
+        "Question 9 - Write a function that takes a string and returns a dictionary with the frequency of each word.<br>\n",
+        "Example: word_frequency(\"the cat the dog\") -> {\"the\":2, \"cat\":1, \"dog\": 1}\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "id": "c1975074",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'the': 3, 'cat': 1, 'god': 1}\n"
+          ]
+        }
+      ],
+      "source": [
+        "input_str09 = \"the cat the god the\"\n",
+        "def word_frequency(input_str):\n",
+        "    word_freq = {}\n",
+        "    word = \"\"\n",
+        "    for char in input_str:\n",
+        "        if char != \" \":\n",
+        "            word = word + char\n",
+        "        elif char == \" \":\n",
+        "            if word not in word_freq:\n",
+        "                word_freq[word] = 1\n",
+        "            elif word in word_freq:\n",
+        "                word_freq[word] +=1\n",
+        "            word = \"\"\n",
+        "    if word:\n",
+        "        if word not in word_freq:\n",
+        "            word_freq[word] = 1\n",
+        "        elif word in word_freq:\n",
+        "            word_freq[word] +=1\n",
+        "    return word_freq\n",
+        "    \n",
+        "print(word_frequency(input_str09))"
+      ]
     }
   ],
   "metadata": {
