Practicing Q11: count_chars

--- a/incedo_questions/practice_days/2026/02-feb/feb09.ipynb
+++ b/incedo_questions/practice_days/2026/02-feb/feb09.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Practice Date - 09th February 2026\n",
     "\n",
-    "## Repeating Question 10 to Question 12\n",
+    "## Repeating Question 10\n",
     "\n",
     "---\n",
     "Question 10 - Write a function that takes a list of words and joins them into a single string with spaces using join() <br>\n",
@@ -16,20 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "66b3e788",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "str.join() takes exactly one argument (2 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mjoin_words\u001b[39m(input_str1, input_str2):\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m.join(input_str1,input_str2)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mjoin_words\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_str10\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_str11\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mjoin_words\u001b[39m\u001b[34m(input_str1, input_str2)\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mjoin_words\u001b[39m(input_str1, input_str2):\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33;43m\"\u001b[39;49m\u001b[33;43m \u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_str1\u001b[49m\u001b[43m,\u001b[49m\u001b[43minput_str2\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: str.join() takes exactly one argument (2 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
      ]
     }
    ],
