--- a/incedo_questions/practice_days/2026/02-feb/feb14.ipynb
+++ b/incedo_questions/practice_days/2026/02-feb/feb14.ipynb
@@ -42,6 +42,66 @@
     "\n",
     "print(count_chars(input_str11))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ebdbe77",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Question 12: Write a function that square numbers in a list if they are odd, using a list comprehension with a conditional.<br>\n",
+    "Example: square_odds([1,2,3,4]) -> [1, 2, 9, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acd31c1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 9, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list = [1,2,3,4]\n",
+    "def square_odds(input_list: list[int]) -> list[int]:\n",
+    "    output_list = [num * num if num%2 ==1 else num for num in input_list]\n",
+    "    return output_list\n",
+    "\n",
+    "print(square_odds(input_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b05cad0",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Question 13: Write a function that rotates a list to the right by k steps using slicing.<br>\n",
+    "Example: rotate_list([1, 2, 3, 4, 5], 2) -> [4, 5, 1, 2 ,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8492ae02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_list13 = [1, 2, 3, 4, 5]\n",
+    "rotating_steps = 2\n",
+    "def rotate_list(input_list: list[int], steps:int) -> list[int]:\n",
+    "    n = len(input_list)\n",
+    "    return input_list[n - steps:n-steps:-1]\n",
+    "\n",
+    "print(rotate_list(input_list13, rotating_steps))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
