--- a/incedo_questions/practice_days/2026/02-feb/feb14.ipynb
+++ b/incedo_questions/practice_days/2026/02-feb/feb14.ipynb
@@ -88,16 +88,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8492ae02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "input_list13 = [1, 2, 3, 4, 5]\n",
     "rotating_steps = 2\n",
     "def rotate_list(input_list: list[int], steps:int) -> list[int]:\n",
     "    n = len(input_list)\n",
-    "    return input_list[n - steps:n-steps:-1]\n",
+    "    return input_list[n - steps::] + input_list[:n-steps:]\n",
     "\n",
     "print(rotate_list(input_list13, rotating_steps))\n",
     "\n"
