--- a/incedo_questions/practice_days/2026/02-feb/feb16.ipynb
+++ b/incedo_questions/practice_days/2026/02-feb/feb16.ipynb
@@ -16,16 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f5e679ad",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (4227071164.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m{\"name\": \"Bob\", \"age\" : 25}\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Alice', 'age': 30}, {'name': 'Bob', 'age': 25}]\n"
      ]
     }
    ],
@@ -39,6 +38,47 @@
     "    return sorted(input_list, key=lambda d: d[\"name\"])\n",
     "\n",
     "print(sort_by_name(list_of_dictionaries))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70e2a8a1",
+   "metadata": {},
+   "source": [
+    "Question 15: Write a function that takes a list of numbers and return their arithematic mean (return None for an empty list). <br>\n",
+    "average_list([4,8]) -> 6.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "616a59aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list15 = [4,8,10,12,15]\n",
+    "def average_list(input_list: list[int]) -> int:\n",
+    "    if input_list:\n",
+    "        average = 0\n",
+    "        sum = 0\n",
+    "        total_numbers = 0\n",
+    "        for num in input_list:\n",
+    "            sum += num\n",
+    "            total_numbers += 1\n",
+    "            average = float(sum/total_numbers)\n",
+    "        return average\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "print(average_list(input_list15))"
    ]
   }
  ],
