--- a/incedo_questions/practice_days/2026/02-feb/feb16.ipynb
+++ b/incedo_questions/practice_days/2026/02-feb/feb16.ipynb
@@ -80,6 +80,53 @@
     "\n",
     "print(average_list(input_list15))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18c01d5b",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Question 16: Write a function that returns the second-largest unique number in a list (raise an error if the list has fewer than two unique values). <br>\n",
+    "Example: second_largest([4, 1, 7, 7, 3]) -> 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84e6baa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list16 = [4, 1, 7, 7, 3]\n",
+    "#input_list16 = [7,7]\n",
+    "def second_largest(input_list: list[int]) -> int:\n",
+    "    if len(input_list) < 3:\n",
+    "        #raise Exception(\"Error: less than 2 element\")\n",
+    "        if len(input_list) != len(set(input_list)):\n",
+    "            raise Exception(\"Error: Less than 2 unique values\")\n",
+    "    else:\n",
+    "        max_element = max(input_list)\n",
+    "        second_largest = 0\n",
+    "        for num in input_list:\n",
+    "            if num == max_element:\n",
+    "                continue\n",
+    "            elif second_largest < num:\n",
+    "                second_largest = num\n",
+    "        return second_largest\n",
+    "    \n",
+    "print(second_largest(input_list16))\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
